[gd_scene load_steps=9 format=2]

[ext_resource path="res://objects/assets/sign.png" type="Texture" id=1]
[ext_resource path="res://objects/TextSign.gd" type="Script" id=2]
[ext_resource path="res://fonts/Lemon Days.otf" type="DynamicFontData" id=3]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("LabelNode/Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "hide"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("LabelNode/Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "show"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("LabelNode/Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 3 )

[node name="TextSign" type="Area2D"]
script = ExtResource( 2 )

[node name="Sign" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/hide = SubResource( 5 )
anims/show = SubResource( 4 )

[node name="LabelNode" type="Node2D" parent="."]
z_index = 999

[node name="Label" type="Label" parent="LabelNode"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -47.0
margin_top = -47.0
margin_right = 47.0
margin_bottom = -25.0
custom_fonts/font = SubResource( 2 )
text = "Hello Word"
align = 1
autowrap = true

[connection signal="body_entered" from="." to="." method="_on_TextSign_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_TextSign_body_exited"]
